tests/files/type_checker_tests/should_pass/242.cmdr
//Test that lambdas type check
add = fn (): int -> {return 1 + 2;};
add();
x = add();
