tests/files/type_checker_tests/should_fail/062.cmdr
//Should fail if variable already exists
x: int = 3;
foo = fn (x: int): int -> {
    return x;
};
